[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/UI/Slider.gd" type="Script" id=1]
[ext_resource path="res://Fonts/SliderFont.tres" type="DynamicFont" id=2]

[sub_resource type="Theme" id=1]

[node name="Slider" type="HBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -26.0
margin_right = 192.0
margin_bottom = 27.0
custom_constants/separation = 10
alignment = 1
script = ExtResource( 1 )
slider_label_text = "LABEL"

[node name="Label" type="Label" parent="."]
margin_top = 7.0
margin_right = 82.0
margin_bottom = 46.0
custom_colors/font_color = Color( 0.803922, 0.913725, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "LABEL"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 92.0
margin_right = 384.0
margin_bottom = 53.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource( 1 )
max_value = 1.0
step = 0.1
value = 0.8

[connection signal="mouse_entered" from="." to="." method="_on_Slider_mouse_entered"]
[connection signal="focus_entered" from="HSlider" to="." method="_on_HSlider_focus_entered"]
[connection signal="focus_exited" from="HSlider" to="." method="_on_HSlider_focus_exited"]
[connection signal="mouse_entered" from="HSlider" to="." method="_on_HSlider_mouse_entered"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
